--- a/css/coverage.scss
+++ b/css/coverage.scss
@@ -1,18 +1,22 @@
 ---
 ---
+$light-grey: #bebebe;
+$blue-green: #008785;
+$white: #fff;
+
 .coverage {
   .list-items,
   .row {
-    margin: 0 !important;
+    margin: 0;
   }
 
   .functions {
-    border-top: solid 1px #BEBEBE;
+    border-top: solid 1px $light-grey;
   }
 
   .targets {
-    background-color: #008785;
-    color: #fff;
+    background-color: $blue-green;
+    color: $white;
 
     h4 {
       padding: 13px 0;
