--- a/_includes/header.html
+++ b/_includes/header.html
@@ -41,7 +41,7 @@
                             <ul class="dropdown-menu" role="menu">
                                 <li><a href="{{ 'docs/' | absolute_url }}">Code documentation</a></li>
                                 <li class="divider"></li>
-                                <li><a href="{{ 'coverage/' | absolute_url }}">Coverage</a></li>
+                               <!-- <li><a href="{{ 'coverage/' | absolute_url }}">Coverage</a></li> -->
                             </ul>
                         </li>
                         
