--- a/_includes/header.html
+++ b/_includes/header.html
@@ -46,7 +46,7 @@
                         </li>
                         
                         <li>
-                            <a class="color-type-secondary" href="{{ '/how-tos' | absolute_url }}">How-tos</a>
+                            <a class="color-type-secondary" href="{{ '/howtos' | absolute_url }}">How-tos</a>
                         </li>
 
                         <li>
