--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -14,8 +14,8 @@ layout: default
 </div>
 
 <p class="goHome container">
-  {% if page.how-tos %}
-    <a href="{{ "how-tos" | absolute_url }}">
+  {% if page.howtos %}
+    <a href="{{ "howtos" | absolute_url }}">
   {% else %}
     <a href="{{ "news" | absolute_url }}">
   {% endif %}
