docs(code): add to main menu test coverage
Signed-off-by: Hector Rondon <hrondon@teclib.com>

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -41,7 +41,7 @@
                             <ul class="dropdown-menu" role="menu">
                                 <li><a href="{{ 'development/code-documentation/' | absolute_url }}">Code documentation</a></li>
                                 <li class="divider"></li>
-                               <!-- <li><a href="{{ 'coverage/' | absolute_url }}">Coverage</a></li> -->
+                                <li><a href="{{ 'development/coverage/' | absolute_url }}">Coverage</a></li>
                             </ul>
                         </li>
                         
