--- a/css/coverage.scss
+++ b/css/coverage.scss
@@ -1,29 +1,7 @@
 ---
 ---
-$light-grey: #bebebe;
-$blue-green: #008785;
-$white: #fff;
-
 .coverage {
-  .list-items,
-  .row {
-    margin: 0;
-  }
-
-  .functions {
-    border-top: solid 1px $light-grey;
-  }
-
-  .targets {
-    background-color: $blue-green;
-    color: $white;
-
-    h4 {
-      padding: 13px 0;
-    }
-  }
-
-  h2 {
-    padding: 37px 0 20px;
+  nav {
+    display: none;
   }
 }
